add main logic
things to add:
- url validation
- url encoding (base64 is not very good)
- tests (they fail at this time