@@ -3,8 +3,8 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 plugins {
     id("org.springframework.boot") version "2.7.0"
     id("io.spring.dependency-management") version "1.0.11.RELEASE"
-    kotlin("jvm") version "1.7.0"
-    kotlin("plugin.spring") version "1.7.0"
+    kotlin("jvm") version "1.6.21"
+    kotlin("plugin.spring") version "1.6.21"
 }
 
 group = "ru.mplain"
@@ -24,6 +24,7 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor")
     implementation("org.springdoc:springdoc-openapi-webflux-ui:1.6.9")
+    implementation("it.ozimov:embedded-redis:0.7.3") { exclude(module = "slf4j-simple") }
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("io.kotest:kotest-runner-junit5-jvm:5.3.0")
     testImplementation("io.kotest.extensions:kotest-extensions-spring:1.1.1")
@@ -39,4 +40,9 @@ tasks.withType<KotlinCompile> {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    /**
+     * Need this to make @SkykBean + Repository work on JDK 16+
+     * https://github.com/Ninja-Squad/springmockk/issues/65
+     */
+    jvmArgs = listOf("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
 }
